improve colors and gradient styles

--- a/src/lib/components/glue/app.css
+++ b/src/lib/components/glue/app.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .bg-gradient {
-    @apply bg-gradient-to-br from-cyan-500 via-indigo-500 to-cyan-500
+    @apply bg-gradient-to-br from-blue-400 via-indigo-600 to-blue-400 dark:from-white dark:via-indigo-300 dark:to-white
   }
 
   .text-gradient {
